[project]
name = "claudio"
version = "0.1.0"
description = "MCP server for audio understanding via Gemini"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "google-genai",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
