[project]
name = "claudio"
version = "0.2.1"
description = "MCP server for audio understanding via Gemini"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "google-genai",
]

[project.scripts]
claudio = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]

[tool.hatch.build.targets.sdist]
include = ["server.py", "pyproject.toml"]
